# aoc2024

./: .gitignore  2024aoc.cabal  aoc2024.cabal
01a/: Main.hs
01b/: Main.hs
02a/: Main.hs
02b/: Main.hs
lib/: Lib.hs
src/: Days.hs  Lib.hs  Main.hs
src/Days/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D18.hs  D19.hs  D20.hs  D21.hs  D22.hs  D23.hs  D24.hs  D25.hs
src/Lib/: Field.hs  Point.hs
