cabal-version:      3.4
name:               2024aoc
version:            0.1.0.0
license:            NONE
build-type:         Simple

common stuff
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: RecordWildCards
    build-depends:
        base ^>=4.20.0.0,
        containers

library
    import:           stuff
    hs-source-dirs:   lib
    exposed-modules:  Lib
    -- build-depends:

test-suite 2024aoc-test
    import:           stuff
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        2024aoc

executable 2024aoc01a
    import:           stuff
    hs-source-dirs:   01a
    main-is:          Main.hs
    build-depends:
        2024aoc

executable 2024aoc01b
    import:           stuff
    hs-source-dirs:   01b
    main-is:          Main.hs
    build-depends:
        2024aoc

executable 2024aoc02a
    import:           stuff
    hs-source-dirs:   02a
    main-is:          Main.hs
    build-depends:
        2024aoc

executable 2024aoc02b
    import:           stuff
    hs-source-dirs:   02b
    main-is:          Main.hs
    build-depends:
        2024aoc
